manifests/apps/webapp/httproute.yaml
# manifests/apps/webapp/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-http
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
      kind: Gateway
  hostnames:
    - web.talos.detainedu.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
